# cpvr-opengl-new

./: CMakeLists.txt  Readme_Linux.md  Readme_macOS.md
CG-02_D.01_HelloOpenGL/: CMakeLists.txt
CG-02_D.01_HelloOpenGL/src/: HelloOpenGL.cpp
CG-02_D.02_HelloGLSL/: CMakeLists.txt
CG-02_D.02_HelloGLSL/glsl/: helloglsl.frag  helloglsl.vert
CG-02_D.02_HelloGLSL/src/: HelloGLSL.cpp
_CMAKE/: CG-PROJECTS.vcxproj.usertemplate  FindFLTK.cmake  FindGLEW.cmake  FindGLM.cmake  MACRO_ENSURE_OUT_OF_SOURCE_BUILD.cmake  MACRO_GET_DIRECTORIES.cmake
_COMMON/inc/: TrackBall.h  UtilGLSL.h
_COMMON/src/: TrackBall.cpp  UtilGLSL.cpp
_LIBS/FLTK/lib/win/Debug/: fltk_formsd.lib  fltk_gld.lib  fltk_imagesd.lib  fltk_jpegd.lib  fltk_pngd.lib  fltk_zd.lib
_LIBS/FLTK/lib/win/Release/: fltk.lib  fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_jpeg.lib  fltk_png.lib  fltk_z.lib
_LIBS/GLEW/lib/win/Debug/: _glew_s.pdb_  libglew32d.lib
_LIBS/GLEW/lib/win/Release/: libglew32.lib
